--- a/css/layout.css
+++ b/css/layout.css
@@ -1,18 +1,28 @@
 .header{
-	background-color: rgba(220,230,230,0.5);
-	color:#000;	
+	background-color: #eee;
+	color:black;	
+	height: 18vh;
 }
 
 .header-text{
-	padding-top: 6vh;
-    padding-bottom: 6vh;
+	padding-top: 1vh;
+	padding-bottom: 1vh;
 }
 
 .primary-header-text{
+	padding-right: 0;
 	font-family: 'Acme', sans-serif;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	margin-left: -4vh;
+}
+
+.primary-text{
+	margin-top: 10px;
+}
+
+.secondary-text{
+	margin-top: 10px;
+	text-align: center;
+	border-right: 1px solid black;
+	border-left: 1px solid black;
 }
 
 .secondary-header-text{
@@ -20,8 +30,41 @@
 }
 
 .logo{
-	height: 13%;	
-	width: 13%;
+	margin-left: 15vh;
+	height: 6%;	
+	width: 6%;
+}
+
+.social-icons{
+	padding-top: 1vh;
+	padding-bottom: 1vh;
+	padding-left: 0;
+	padding-right: 0;
+	height: 100%;
+	width: 10%;
+}
+
+.social-icons>a{
+	height: 100%;
+	display: inline-block;
+	padding-top: 1vh;
+	padding-bottom: 1vh;
+	text-decoration: none;
+}
+
+.social-icons>a>i{
+	font-size: 16px;
+	margin-right: 2vh;
+	margin-left: 2vh;
+	color: black;
+}
+
+.social-icons>a:hover {
+	background-color: black;
+}
+
+.social-icons>a:hover .icons{
+	color: white;
 }
 
 .navbar{
