--- a/css/layout.css
+++ b/css/layout.css
@@ -4,6 +4,10 @@
 	height: 18vh;
 }
 
+body{
+	background-color: #eee;
+}
+
 .header-text{
 	padding-top: 1vh;
 	padding-bottom: 1vh;
@@ -124,4 +128,11 @@
 .affix{
 	top:0;
 	z-index: 1;
+}
+
+#fillable{
+	margin-top:4vh;
+	margin-bottom: 4vh;
+	margin-left: 10vh;
+	margin-right: 10vh;
 }
