--- a/css/content.css
+++ b/css/content.css
@@ -122,6 +122,12 @@ hr{
 	list-style-type: none;
 }
 
+.links-text{
+  font-family: 'Raleway';
+  padding-top: 3vh;
+  padding-bottom: 3vh;
+}
+
 .event-text{
 	padding-top: 2vh;
 	padding-bottom: 8vh;
@@ -162,7 +168,7 @@ hr{
 
 .carousel-inner>.item>img{
 	width: 100%;
-	height: 400px;
+	height: 73.5vh;
 }
 
 #myCarousel>.carousel-inner{
