--- a/css/content.css
+++ b/css/content.css
@@ -15,7 +15,7 @@ hr{
 }
 
 .imagedescription{
-	background-color: rgba(220,230,230,0.5);
+	background-color: white;
 	height: 36vh;
 }
 
@@ -25,8 +25,8 @@ hr{
 }
 
 .textcontainer{
-	font-family: 'Acme', sans-serif;
-	background-color: rgba(220,230,230,0.5);
+	font-family: 'Raleway';
+	background-color: white;
 	margin-left: 20px;
 	padding: 10px;
 	min-height: 300px;	
@@ -34,15 +34,22 @@ hr{
 
 .imagetext{
 	font-size: 2vh;
-	font-family: 'Acme', sans-serif;
+	font-family: 'Raleway';
 	margin-top: 1vh;
 	margin-bottom: 1vh;
 }
 
 #mainheader{
-   font-size: 5vh;
+   font-size: 3.2vh;
    margin-top: 4vh;
-   margin-bottom: 0px;
+   margin-bottom: 2vh;
+   border-bottaom: 0.2px solid blue;
+}
+
+#aims-wrap{
+   background-color: white;
+   margin-top: 4vh;
+   margin-bottom: 4vh;
 }
 
 #email{
@@ -58,7 +65,7 @@ hr{
 }
 
 .messagewrapper{
-	background-color: rgba(220,230,230,0.5);
+	background-color: white;
 	padding-bottom: 4vh;
 }
 
@@ -168,7 +175,7 @@ hr{
 
 .carousel-inner>.item>img{
 	width: 100%;
-	height: 73.5vh;
+	height: 73.3vh;
 }
 
 #myCarousel>.carousel-inner{
