--- a/css/content.css
+++ b/css/content.css
@@ -197,11 +197,31 @@ hr{
 }
 
 #objectives {
+  z-index: 0;
+  position: relative;
   padding-top: 4vh;
   padding-bottom: 4vh;
   min-height: 400px;
   text-align: center;
-  background-image: url(../img/aims.jpg);
+  background-color: white;
+}
+
+.welcome-bg{
+  position: absolute;
+  z-index: -1;
+  background-image: url("../img/blue-logo.png");
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  opacity: 0.2;
+}
+
+.welcome-text-wrap{
+   position: absolute;
+   top:4%;
+   left: 15%;
 }
 
 #parallax-text{
@@ -211,7 +231,6 @@ hr{
 }
 
 .parallax {
-  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
