--- a/css/content.css
+++ b/css/content.css
@@ -39,11 +39,15 @@ hr{
 	margin-bottom: 1vh;
 }
 
+.font{
+  font-family: 'Raleway';
+}
+
 #mainheader{
    font-size: 3.2vh;
    margin-top: 4vh;
    margin-bottom: 2vh;
-   border-bottaom: 0.2px solid blue;
+   border-bottom: 0.2px solid blue;
 }
 
 #aims-wrap{
@@ -185,7 +189,7 @@ hr{
 .carousel-inner>.item>.row>.col-md-4>img{
 	box-shadow: -8px 4px 8px 0 rgba(0, 0, 0, 0.4), -4px 6px 20px 0 rgba(0, 0, 0, 0.4);
 	width: 100%;
-	height: 300px;
+	height: 30vh;
 }
 
 #newreg{
@@ -211,7 +215,7 @@ hr{
   z-index: -1;
   background-image: url("../img/blue-logo.png");
   width: 100%;
-  height: 100%;
+  height: 360px;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -222,6 +226,12 @@ hr{
    position: absolute;
    top:4%;
    left: 15%;
+}
+
+.notable-alumni-wrap{
+  background-color: white;
+  margin-top: 4vh;
+  padding-bottom: 4vh;
 }
 
 #parallax-text{
