--- a/css/content.css
+++ b/css/content.css
@@ -80,7 +80,7 @@ hr{
 
 .team-text{
 	height: 200px;
-	background-color: rgba(220,230,230,0.5);
+	background-color: #fff;
 }
 
 .team-image{
@@ -244,10 +244,62 @@ hr{
   padding-bottom: 4vh;
 }
 
-#parallax-text{
+.parallax-text{
    font-size: 24px;	
    font-family: 'Raleway';
    color: black;
+}
+
+.event-description{
+  background-color: #fff;
+  padding: 2vh 2vh 2vh 2vh;
+  font-family: 'Raleway'; 
+}
+
+.btw-first{
+  position: relative;
+  margin-top: 8vh;
+}
+
+.btw-second{
+  position: relative;
+  margin-top: 8vh;
+}
+
+.btw-third{
+  position: relative;
+  margin-top: 8vh;
+}
+
+.btw-image{
+   padding: 0;
+}
+
+.btw-text{
+  background-color: #fff;
+  font-family: 'Raleway';
+  width: 81.3%;
+  margin-left: 2%;
+  height: 20vh;
+}
+
+.read-more{
+  position: absolute;
+  right: 2%;
+  bottom: 2%;
+  color: blue;
+  font-family: 'Raleway';
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.modal-title{
+  font-family: 'Raleway';
+  font-weight: 500;
+}
+
+.modal-body{
+  font-family: 'Raleway';
 }
 
 blockquote{
@@ -265,8 +317,8 @@ blockquote{
   text-align: justify;
   
   /*Borders - (Optional)*/
-  border-left: 15px solid #c76c0c;
-  border-right: 2px solid #c76c0c;
+  border-left: 15px solid #00274d;
+  border-right: 2px solid #00274d;
 }
 
 blockquote::before{
