--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,14 @@
+#overlay{
+	z-index: 1000;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top:45%;
+	left: 45%;
+    background-color:#eee;
+    visibility: hidden;
+}
+	
 .header{
 	background-color: #eee;
 	color:black;	
