--- a/css/content.css
+++ b/css/content.css
@@ -5,7 +5,7 @@ hr{
 }
 
 #homewrapper{
-	margin: 0 auto;
+	padding-left: 8vh;
 }
 
 #deanimage{
@@ -116,6 +116,10 @@ hr{
 
 @media only screen and (max-width: 767px){
 
+     #homewrapper{
+       padding-left: 0;
+     }
+
      .first-card,.middle-card,.last-card{
       width: 100%;
       margin: 0;
@@ -179,6 +183,11 @@ hr{
         padding-right: 0;
      }
 
+     .col-md-10{
+       padding-left: 0;
+       padding-right: 0;
+     }
+
      .imagecontainer{
        margin-left: 0;
      }
@@ -201,6 +210,17 @@ hr{
        width: 100%;
        margin-left: 0;
        margin-right: 0;
+     }
+
+     .row .btw-image{
+        width: 100%;
+        height: 35vh;
+     }
+
+     .row .btw-text{
+        margin-left: 0;
+        width: 100%;
+        height: 20vh;
      }
 
      .foot{
@@ -358,20 +378,21 @@ hr{
 
 .btw-first{
   position: relative;
-  margin-top: 8vh;
+  margin-top: 4vh;
 }
 
 .btw-second{
   position: relative;
-  margin-top: 8vh;
+  margin-top: 4vh;
 }
 
 .btw-third{
   position: relative;
-  margin-top: 8vh;
+  margin-top: 4vh;
 }
 
 .btw-image{
+   height: 150px;
    padding: 0;
 }
 
@@ -380,7 +401,7 @@ hr{
   font-family: 'Raleway';
   width: 81.3%;
   margin-left: 2%;
-  height: 20vh;
+  height: 150px;
 }
 
 .read-more{
