--- a/css/content.css
+++ b/css/content.css
@@ -207,7 +207,7 @@ hr{
 .carousel-inner>.item>.row>.col-md-4>img{
 	box-shadow: -8px 4px 8px 0 rgba(0, 0, 0, 0.4), -4px 6px 20px 0 rgba(0, 0, 0, 0.4);
 	width: 100%;
-	height: 30vh;
+	height: 40vh;
 }
 
 #newreg{
@@ -251,6 +251,14 @@ hr{
   background-color: white;
   margin-top: 4vh;
   padding-bottom: 4vh;
+}
+
+.notable-img{
+  position: absolute;
+  right: 5%;
+  top: 4%;
+  height: 100px;
+  width: 100px;
 }
 
 .parallax-text{
