--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,15 @@
-/*For Mobile Phones*/
+/*For Small Mobile Phones*/
+@media only screen and (max-width:350px){
 
-@media only screen and (max-width: 767px){
+    .row #objectives{
+       height: 600px;
+    }
+
+}
+
+/*For Regular Mobile Phones*/
+
+@media only screen and (max-width: 736px){
 
     .home-main-row{
        height: auto;
@@ -13,6 +22,11 @@
      .first-card,.middle-card,.last-card{
       width: 100%;
       margin: 0;
+     }
+
+     .event-date{
+       margin: 0 auto;
+       width: 40%;
      }
 
      .primary-text{
@@ -36,8 +50,16 @@
       margin-right: 0;
      }
 
+     .welcome-text-wrap{
+       padding: 2vh;
+     }
+
      .notable-img{
-       top: 0;
+       display: none;
+     }
+
+     .carousel-inner>.item>img{
+        height: 60vh;
      }
 
      .bottom-nav{
@@ -57,6 +79,10 @@
      .row{
       margin-right: 0;
       margin-left:0;
+     }
+
+     .login-row{
+       margin-top: 3vh;
      }
 
      .team-text{
@@ -135,6 +161,157 @@
 }
 
 /*For Tablets*/
-@media only screen and (min-width: 768px and max-width: 1200px){
+@media (min-width: 737px) and (max-width: 1200px){
+
+    .row #objectives{
+       height: 350px;
+    }
+
+    .home-main-row{
+       height: auto;
+    }
+
+     #homewrapper{
+       padding-left: 0;
+     }
+
+     .first-card,.middle-card,.last-card{
+      width: 100%;
+      margin: 0;
+     }
+
+    .event-date{
+       margin: 0 auto;
+       width: 40%;
+     }
+
+     .primary-text{
+      text-align: center;
+     }
+
+     .social-icons{
+      display: none;
+     }
+
+     .links-row{
+      margin-bottom: 3vh;
+     }
+
+     .notable-alumni-wrap{
+      width: 100%;
+      margin-right: 0;
+     }
+
+     .welcome-text-wrap{
+       padding: 2vh;
+     }
+
+     .notable-img{
+       display: none;
+     }
+
+     .carousel-inner>.item>img{
+        height: 90vh;
+     }
+
+     .carousel-inner>.item>.row>.col-md-4>img{
+        height: 70vh;
+      }
+
+     .bottom-nav{
+      display: none;
+     }
+
+     #fillable{
+       margin-left: 0;
+       margin-right: 0;
+     }
+
+     #navbar{
+      left: 0;
+      width: 100%;
+     }
+
+     .row{
+      margin-right: 0;
+      margin-left:0;
+     }
+
+     .login-row{
+       margin-top: 3vh;
+     }
+
+     .team-text{
+       padding: 2vh;
+       height: 25vh;
+     }
+
+     .team-image{
+        height: 50vh;
+     }
+
+     #mainheader{
+      margin-top: 0;
+      margin-bottom:0;
+     }
+
+     .col-md-2{
+        padding-left: 0;
+        padding-right: 0;
+     }
+
+      .col-md-6{
+        padding-left: 0;
+        padding-right: 0;
+     }
+
+     .col-md-3{
+        padding-left: 0;
+        padding-right: 0;
+     }
+
+     .col-md-10{
+       padding-left: 0;
+       padding-right: 0;
+     }
+
+     .imagecontainer{
+       margin-left: 0;
+     }
+
+     .imagedescription{
+        padding: 3vh;
+        height: 30vh;
+     }
+
+     #deanimage{
+       height: 50vh;
+     }
+
+
+     .messagewrapper{
+       padding: 2vh;
+     }
+
+      .row .gallery{
+       width: 100%;
+       margin-left: 0;
+       margin-right: 0;
+     }
+
+     .row .btw-image{
+        width: 100%;
+        height: 35vh;
+     }
+
+     .row .btw-text{
+        margin-left: 0;
+        width: 100%;
+        height: 20vh;
+     }
+
+     .foot{
+       line-height: 20px;
+     }
 
 }
