--- a/css/content.css
+++ b/css/content.css
@@ -13,7 +13,12 @@ hr{
   color: black;
 }
 
+form .login{
+  color: white;
+}
+
 .searchalumni{
+  font-family: 'Raleway';
   background-color: white;
   min-height: 300px;
 }
