--- a/css/responsive.css
+++ b/css/responsive.css
@@ -29,6 +29,10 @@
        width: 40%;
      }
 
+     .event-description-text{
+      padding: 2vh;
+     }
+
      .primary-text{
       text-align: center;
      }
@@ -159,8 +163,13 @@
 
      .row .btw-text{
         margin-left: 0;
+        padding: 2vh;
         width: 100%;
-        height: 20vh;
+        height: 38vh;
+     }
+
+     h4{
+      font-size: 14px;
      }
 
      .foot{
